# linkedin-github-showcase-agent

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  requirments.txt
notebooks/: 01_github_api_exploration.ipynb  02_agent.ipynb
prompt/: prompts.py
tools/: helpers.py  init_github_client.py  tools.py
